--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Localboards-API",
   "version": "0.0.1",
   "description": "Testing the interface with NodeJS on Heroku.",
-  "main": "index.js",
+  "main": "web.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
