researching issues with first run in heroku.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
-		"logfmt": "^0.23.0",
+		"logfmt": "^0.23.0"
 	},
 	"engines": {
 		"node": ">=0.10.x"
