Update to readme.md and project dependencies.

--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
 	"name": "Localboards-API",
-	"version": "0.0.1",
-	"description": "Testing the interface with NodeJS on Heroku.",
 	"main": "web.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git://github.com/trakaus/localboards-api-deux.git"
-	},
-	"author": {
-		"name": "Ryan Walker",
-		"email": "w.ryan.walker at gmail dot com"
-	},
-	"contributors": [
-		{"name": "John Doe"}
-	],
-	"dependencies": {
-		
-	},
-	"bugs": {
-		"url": "http://github.com/trakaus/localboards-api-deux/issues"
-	},
-	"homepage": "http://trakaus.github.com/localboards-api-deux",
+	"version": "0.0.1",
+	"license": "MIT",
+	"description": "Testing the interface with NodeJS on Heroku.",
+	"homepage": "http://github.com/trakaus/localboards-api-deux",
 	"keywords": [
 		"localboards",
 		"api",
 		"restful"
 	],
-	"author": "",
-	"license": "MIT",
+	"author": {
+		"name": "Ryan Walker",
+		"email": "w.ryan.walker at gmail dot com"
+	},
+	"contributors": [
+		{"name": "** be the first **"}
+	],
 	"dependencies": {
-		"logfmt": "^0.23.0"
+		"logfmt": "^0.23.0",
+		"okay":"0.3.0",
+		"when":"2.8.0",
+		"restify":"2.6.3",
+		"pg-query":">=0.7.0"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git://github.com/trakaus/localboards-api-deux.git"
+	},
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"bugs": {
+		"url": "http://github.com/trakaus/localboards-api-deux/issues"
 	},
 	"engines": {
 		"node": ">=0.10.x"
