--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "url": "git://github.com/trakaus/localboards-api-deux.git"
   },
   "scripts": {
+    "start": "node web",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bugs": {
